--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/add_employee.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/add_employee.html
@@ -97,7 +97,7 @@
         <div class="form-row">
             <div class="form-group col-md-4">
                 <label for="inputBankAccNo">Bank Account Number</label>
-                <input type="text" class="form-control" id="inputBankAccNo" name="inputBankAccNo" placeholder="" minlength='12' maxlength='12' required>
+                <input type="text" class="form-control" id="inputBankAccNo" name="inputBankAccNo" placeholder="For Newhires: 000000000000" minlength='12' maxlength='12' required>
             </div>
             <div class="form-group col-md-4">
                 <label for="inputSalary">Salary</label>
