--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
@@ -7,7 +7,7 @@
     $(document).ready(function() {
         $('#U_A').click(function() {
             $.ajax({
-                url: '{% url "A_UPLOAD" %}',
+                url: '{% url "A_UPLOAD" UID=user.pk %}',
                 type: 'GET',  // Or 'POST' depending on your view's implementation
                 success: function(response) {
                     $('#resultDiv').text('Data imported and database cleared successfully.');
@@ -36,7 +36,11 @@
         <div class="navbar-content">
             <ul class="main-nav">
                 <div class="nav-search">
-                    <button class="btn" name="U_A" id="U_A"><i class="lni lni-upload"></i> Upload Attendance</button>
+                    <form action={% url "WT_UPLOAD" UID=user.pk %} method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <input type="file" required name="A_xls"> 
+                        <button type="submit">Submit</button> 
+                    </form>
                 </div>
             </ul>
         </div>
