--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
@@ -36,7 +36,7 @@
         <div class="navbar-content">
             <ul class="main-nav">
                 <div class="nav-search">
-                    <form action={% url "WT_UPLOAD" UID=user.pk %} method="post" enctype="multipart/form-data">
+                    <form action={% url "A_UPLOAD" UID=user.pk %} method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         <input type="file" required name="A_xls"> 
                         <button type="submit">Submit</button> 
