editable employee_attendance

--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
@@ -39,7 +39,7 @@
                     <form action={% url "A_UPLOAD" UID=user.pk %} method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         <input type="file" required name="A_xls"> 
-                        <button type="submit">Submit</button> 
+                        <button class="btn" type="submit">Submit</button> 
                     </form>
                 </div>
             </ul>
@@ -68,7 +68,7 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td><a class="btn" href="#"><i class="lni lni-pencil-alt"></i></a></td-->
+                        <td><a class="btn" href="#"><i class="lni lni-pencil-alt" style="color:#861C1A"></i></a></td-->
                     </tr>
                 </tbody>
             </table>
