--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_attendance.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_attendance.html
@@ -24,29 +24,38 @@
         <input type="date" class="form-control" id="mth_yr">
     </div-->
   </div>
-  <div style="overflow-x:auto;">
-    <table id="posts">
-        <thead>
-            <tr>
-                <th style="width:10%">Date</th>
-                <!--th style="width:20%">Attendance Status</t-->
-                <th style="width:15%">Time In</th>
-                <th style="width:15%">Time Out</th>
-                <th style="width:15%">Overtime Hours</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for x in attendance_record %}
-            <tr>
-                <td>{{x.Date}}</td>
-                <td>{{x.TimeIn}}</td>
-                <td>{{x.TimeOut_2}}</td>
-                <td>{{x.OT}}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-  </div>
+  <form method="POST" action="#">
+    <div style="overflow-x:auto;">
+      <table id="posts">
+          <thead>
+              <tr>
+                  <th style="width:10%">Date</th>
+                  <!--th style="width:20%">Attendance Status</t-->
+                  <th style="width:15%">Time In</th>
+                  <th style="width:15%">Time Out</th>
+                  <th style="width:15%">Overtime Hours</th>
+                  <th style="width:15%">Night Shift Hours</th>
+              </tr>
+          </thead>
+          <tbody>
+              {% for x in attendance_record %}
+              <tr>
+                  <td>{{x.Date}}</td>
+                  <td>{{x.TimeIn}}</td>
+                  <td>{{x.TimeOut_2}}</td>
+                  <td><input type="float" class="form-control" id="empOT" value=" {{x.OT}}"></td>
+                  <td><input type="float" class="form-control" id="empNightShft" value=""></td>
+              </tr>
+              {% endfor %}
+          </tbody>
+      </table>
+    </div>
+    <div>
+      <ul class="action-icons">
+          <li><button class="btn btn-success" type="submit">Confirm</button></li>
+      </ul>
+    </div>
+  </form>
 </div>
 <footer>
     <div class="footer-wrap">
