--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/dashboard.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/dashboard.html
@@ -11,7 +11,7 @@
     </div>
     <hr>
     <div class="card px-4 py-4">
-      <h5>At a glace...</h5>
+      <h5>At a glance...</h5>
       <div class="card-deck">
         <div class="card">
           <div class="card-body">
