--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/login.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/login.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="text-center">
                         <button class="btn my-2 btn-primary btn-block" type="submit">Log In</button>
-                        <p><a href="{% url 'reset_pw' %}" style="color:#861D1A"> Forgot Password? </a></p>
+                        <!--p><a href="{% url 'reset_pw' %}" style="color:#861D1A"> Forgot Password? </a></p-->
                     </div>
                 </form>
             </div>      
