--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
@@ -53,7 +53,7 @@
             </div>
             <div class="form-group col-md-2">
                 <label for="inputJoinDate">Join Date</label>
-                <input type="text" class="form-control" id="inputJoinDate" name="inputJoinDate" placeholder="{{a.Join_Date}}" value="{{a.Join_Date}}">
+                <input type="date" class="form-control" id="inputJoinDate" name="inputJoinDate" placeholder="{{a.Join_Date}}" value="{{a.Join_Date |date:'Y-m-d'}}">
             </div>
             <div class="form-group col-md-3">
                 <label for="inputEmpStat">Contract Status</label>
@@ -87,7 +87,7 @@
         <div class="form-row">
             <div class="form-group col-md-4">
                 <label for="inputBankAccNo">Bank Account Number</label>
-                <input type="number" class="form-control" id="inputBankAccNo" name="inputBankAccNo" placeholder="" min='0' minlength='8' maxlength='10' value="{{a.BankNumber}}" required>
+                <input type="number" class="form-control" id="inputBankAccNo" name="inputBankAccNo" placeholder="" min='0' minlength='12' maxlength='1' value="{{a.BankNumber}}" required>
             </div>
             <div class="form-group col-md-4">
                 <label for="inputSalary">Salary</label>
