--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
@@ -60,8 +60,8 @@
                 <select id="inputEmpStat" name="inputEmpStat" class="form-control">
                   <option selected value="{{a.Status}}">Currently: {{a.Status}}</option>
                   <option value="Hired">Hired</option>
-                  <option value="Terminated">Terminated</option>
-                  <option value="On Leave">On Leave</option>
+                  <option value="Probationary">Probationary</option>
+                  <option value="On Leave">Terminated</option>
                 </select>
             </div>
             <div class="form-group col-md-3">
