--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/payslip.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/payslip.html
@@ -57,7 +57,7 @@
                         <td style="width:8%">Basic Pay</td>
                         <td style="width:7%"></td>
                         <td style="width:8%">W/ Tax</td>
-                        <td style="width:7%">{{payrolls.WTAX_Rate_ID}}</td>
+                        <td style="width:7%" value="">{{payrolls.WTAX_Rate_ID}}</td>
                         <td style="width:8%">COOP</td>
                         <td style="width:7%"></td>
                     </tr>
