--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/base.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/base.html
@@ -67,6 +67,9 @@
                         <li class="sidebar-item">
                             <a href="{% url 'attendance_db' UID=user.pk %}" class="sidebar-link">Attendance</a>
                         </li>
+                        <li class="sidebar-item">
+                            <a href="{% url 'settings' UID=user.pk %}" class="sidebar-link">Settings</a>
+                        </li>
                     </ul>
                 </li>
                 
