--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/dashboard.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/dashboard.html
@@ -32,16 +32,8 @@
         <div class="card">
           <div class="card-body">
             <h1><i class="lni lni-hourglass"></i></h1>
-            <h3>10</h3>
+            <h3>{{countdown}}</h3>
             <p class="card-text">Days Until Next Payroll Deadline</p>
-            <!--p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p-->
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-body">
-            <h1><i class="lni lni-postcard"></i></h1>
-            <h1 class="card-title">{{count_hmo}}</h1>
-            <p class="card-text">HMOs to File</p>
             <!--p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p-->
           </div>
         </div>
