--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/settings.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/settings.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="content">
-    <h1> Credit & Deductibles Module </h1>
+    <h1> Settings Module </h1>
     <div id="resultDiv"></div>
     
     <div style="overflow-x:auto;">
@@ -21,14 +21,14 @@
                 <form method="POST" action={% url 'Department_add' UID=user.pk %} enctype="multipart/form-data">{% csrf_token %}
                     <td>Add Department</td>
                     <td><input type="text" class="form-control w-fill" id="A_DEP" name="A_DEP"></td>
-                    <td><button class="btn btn-success" type="submit">ADD Department</button></td>
+                    <td><button class="btn btn-success" type="submit">Add New Department</button></td>
                 </form>
                 </tr>
                 <tr>
                     <form method="POST" action={% url 'Department_del' UID=user.pk %} enctype="multipart/form-data">{% csrf_token %}
                         <td>Delete Department</td>
                         <td>
-                            <select id="D_DEP" name="D_DEP" class="form-control">
+                            <select id="D_DEP" name="D_DEP" class="form-control custom-select mr-sm-2">
                             {% for x in a %}
                             <option value={{x.Department_ID}}> {{x.Department_ID}} </option>
                             {% endfor %}
