--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/add_employee.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/add_employee.html
@@ -86,7 +86,7 @@
             </div>
             <div class="form-group col-md-3">
                 <label for="inputPosition">Employee Position</label>
-                <input type="text" class="form-control" id="inputPosition" name="inputPosition" placeholder="" required pattern="[A-Za-z]*">
+                <input type="text" class="form-control" id="inputPosition" name="inputPosition" placeholder="" required >
             </div>
             
         </div>
@@ -96,7 +96,7 @@
         <div class="form-row">
             <div class="form-group col-md-4">
                 <label for="inputBankAccNo">Bank Account Number</label>
-                <input type="text" class="form-control" id="inputBankAccNo" name="inputBankAccNo" placeholder="For Newhires: 000000000000" minlength='12' maxlength='12' pattern="[00]{10}" required>
+                <input type="text" class="form-control" id="inputBankAccNo" name="inputBankAccNo" placeholder="For Newhires: 000000000000" minlength='12' maxlength='12' pattern="^00\d{10}$" required>
             </div>
             <div class="form-group col-md-4">
                 <label for="inputSalary">Salary</label>
