--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/dashboard.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/dashboard.html
@@ -47,13 +47,15 @@
                 <tr>
                     <th style="width:20%">File Name</th>
                     <th style="width:5%">Date Created</th>
-                    <th style="width:5%">View</th>
+                    <th style="width:5%">Payroll Period</th>
             <tbody>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
+              {%for b in a%}
+              <tr>
+                  <td><a href="{% url 'download_file' file_id=b.BANK_FILE_NAME %}">{{b.BANK_FILE_NAME}}</a></td>
+                  <td>{{b.Date}}</td>
+                  <td>{{b.PAYROLL_PERIOD}}</td>
+              </tr>
+              {% endfor %}
             </tbody>
         </table>
     </div>
