--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
@@ -87,7 +87,7 @@
         <div class="form-row">
             <div class="form-group col-md-4">
                 <label for="inputBankAccNo">Bank Account Number</label>
-                <input type="number" class="form-control" id="inputBankAccNo" name="inputBankAccNo" placeholder="" min='0' minlength='12' maxlength='1' value="{{a.BankNumber}}" required>
+                <input type="text" class="form-control" id="inputBankAccNo" name="inputBankAccNo" placeholder="" min='0' minlength='12' maxlength='1' value="{{a.BankNumber}}" required>
             </div>
             <div class="form-group col-md-4">
                 <label for="inputSalary">Salary</label>
